--- a/Kickstarter.rmd
+++ b/Kickstarter.rmd
@@ -29,29 +29,89 @@ This notebook is for the Git Package submission for the INFM600 Team Project for
 
 Not included in this notebook: Presentation slides, which are available at **NEED LINK HERE**
 
+-----------------------------
+
 # Data Cleaning Documentation
 
-**Owen - INSERT UPDATED VERSION HERE FROM ORIGINAL GITHUB SUBMISSION**
+The source file for our Kickstarter Data Analysis was taken from kaggle.com, under a Creative Commons BY-NC-SA 4.0 license. This means that, as long as we provide the appropriate attribution, do not use the data for commercial purposes, and share our work under the same license, we are free to share and adapt the dataset.
+
+The file contains the following columns:
+
+- ID - unique 10 digit number for the project
+- Name - Alphanumeric name, or title, of the project
+- Category - Sub-category within the main category, defining the type of project within the main category
+- Main Category - Category of project
+- Currency - Three letter designation of the currency the kickstarter used in presenting its goals
+- Deadline - Datetime when the project anticipated being funded by
+- Goal - Total number amount of specified currency at which the project would be considered complete
+- Launched - Datetime when the project launched
+- Pledged - The amount pledged to the Kickstarter in the currency specified
+- State - Final outcome of the kickstarter, as represented by the values "successful", "failed", or "cancelled"
+- Backers - Number of individuals contributing funds to the project
+- Country - Country of origin of the Kickstarter
+- USD Pledged - Pledged column converted to a dollar amount
+
+### Issues with the Data
+
+From a standpoint of completeness and standardization, the file was well-prepared for usage in the project. The data represents an extract of Kickstarter’s own systems, meaning that each field was required to be populated according to their business rules and was limited in the variety of values that it would accept. The one exception to this rule was the name of each Kickstarter project - these were provided by the end users and utilized a variety of character sets to display strings. An additional complication was introduced by the fact that a Kickstarter project could be launched in a variety of currencies, including US Dollars, British Pounds, Euros, and a variety of Scandinavian kroners. The fact that the dataset encompassed multiple years meant that, in any given year, the values of these currencies relative to the value of a dollar was variable. There were also some minor issues with the file format and the uniformity of the values, which are listed below. 
+
+### Cleaning the File
+
+We performed the following operations on the file prior to analysis:
+
+* Lowercasing the "ID" column
+    - In the source file, the "ID" column appears first in the file and is presented in upper case. 
+    - This causes an error when attempting to open the file in Excel, which attempts to read any file with ID as the first column as a SYLK file
+    - Since the file contains Comma-Separated Values, attempting to open the file as SYLK generates an error, meaning the file cannot be opened.
+    - To prevent this, the file was edited via text editor to format the "ID" column as "id".
+* Removing non-ASCII characters from name
+    - Many Kickstarters contain characters that do not map correctly to a UTF-8 charset, such as the Germanic o with an umlaut or accented characters in Spanish. 
+    - Due to low value of this column and the high likelihood of charset-related errors on import, characters not in the ASCII standard were removed from the Name column. 
+    - Values were not replaced - any place that one of these characters were observed, they were simply removed from the file. 
+    - This results in some missing letters in certain names, but readability remains high as the surrounding characters are preserved.
+* USD_Pledged from Float to Int
+    - Certain Kickstarters appear to have solicited partial dollar amounts from backers, resulting in some rows existing as floats rather than as ints. 
+  - Due to the low incidence of floats and the low value of the partial data, floats were truncated to ints in the final file.
+* Launched - Removed values from the year 1970
+    - Some values in the Launched column were listed as 1/1/1970. 
+    - This is an error related to the recording of timestamps in the Unix time format, where all timestamps are recorded as the number of seconds that have elapsed since 0:00:00 on 1/1/1970
+    - Observations with this Launched date were removed, as the date error could be indicative of test data or broader system-level errors with that particular Kickstarter
+* Removed non-USD Observations
+    - As discussed above, the dataset contains observations where currency values were recorded for various international currencies
+    - This creates problems of conversion to USD based on the exchange rate at the point that the Kickstarter was started, which is variable for each currency
+    - Rather than relying on the data provided and assuming a rule had been uniformly applied to all currency types, we chose to limit our analysis to Kickstarters that used USD as their currency.
+    - This required that we remove all observations where the currency was not in USD from the file, which we did. 
+
+-----------------------------
 
 # Data Analysis Script and Outputs
 
-**VJ - INSERT FINAL CONSOLIDATED VERSION HERE INCLUDING PLOTS **
+
+**INSERT FINAL CONSOLIDATED VERSION HERE INCLUDING PLOTS **
+
+-----------------------------
 
 # Written Summary
 
 **UP TO 500 WORDS - JANICE WILL INSERT AFTER WE EDIT FULLY IN GOOGLE DOC**
 
+-----------------------------
+
 # Presentation Slides
 
 Our presentation slides are available at **NEED LINK HERE**
+
+-----------------------------
 
 # Contributorship
 
 **JANICE WILL INSERT ONCE FINALIZED IN GOOGLE DOC**
 
+-----------------------------
+
 # Appendix A - Persona {-}
 
-## PERSONA: Adam Ward {-}
+### PERSONA: Adam Ward {-}
 
 #![Adam Ward | Photo by Maria Badasian on Unsplash.com](maria-badasian-538818-unsplash-personacrop.png)
 
