--- a/Kickstarter.rmd
+++ b/Kickstarter.rmd
@@ -67,248 +67,7 @@ We performed the following operations on the file prior to analysis:
 
 # Data Analysis Script and Outputs
 
-Script is also available on GitHub: https://github.com/OwenJaniceVyjayanthiINFM600/Kickstarter-Data-Analysis/blob/master/Kickstarter_final.R
-
-```{r}
-#_____ Calling all libraries _____#
-
-install.packages("ggplot2")
-
-library(ggplot2)
-library(reshape2)
-library(plyr)
-
-
-Kickstarter_Complete_Cleaned <- read.csv(".\\ks-projects-201801.csv")
-
-drop_cols <- names(Kickstarter_Complete_Cleaned) %in% c("name", "country", "deadline", "usd.pledged")
-
-datasetFull <- Kickstarter_Complete_Cleaned[!drop_cols]
-
-#_____ Exclude outliers (pledge, backers, goal) using 1.5xIQR rule _____#
-# reference: https://www.khanacademy.org/math/statistics-probability/summarizing-quantitative-data/box-whisker-plots/a/identifying-outliers-iqr-rule 
-
-# Ensure values are numeric for pledged, goal, and backers
-
-datasetFull2 <- datasetFull
-datasetFull2$pledged <- as.numeric(as.character(datasetFull$pledged))
-
-datasetFull3 <- datasetFull
-datasetFull3$goal <- as.numeric(as.character(datasetFull2$goal))
-
-datasetFull4 <- datasetFull3
-datasetFull4$backers <- as.numeric(as.character(datasetFull3$backers))
-
-# Find and exclude outliers for pledged 
-#Step 1: Find the median
-medianPledged <- median(datasetFull4$pledged, na.rm = TRUE)
-#Step 2: Define the lower half of the dataset
-bottomHalfPledged <- subset(datasetFull4, datasetFull4$pledged < medianPledged)
-#Step 3: Define the lower quartile
-Q1pledged <- median(bottomHalfPledged$pledged)
-#Step 4: Define the upper half of the dataset
-topHalfPledged <- subset(datasetFull4, datasetFull4$pledged > medianPledged)
-#Step 5: Define the upper quartile
-Q3pledged <- median(topHalfPledged$pledged)
-#Step 6: Define the interquartile range, which all outlier observations should be outside of
-IQRpledged <- Q3pledged - Q1pledged
-#Step 7: Remove all outliers
-datasetFull5 <- subset(datasetFull4, (pledged > (Q1pledged - (1.5 * IQRpledged))) && pledged < (Q3pledged + (1.5 * IQRpledged)))
-
-
-### Find and exclude outliers for goal ###
-#Step 1: Find the median
-medianGoal <- median(datasetFull5$goal, na.rm = TRUE) 
-#Step 2: Define the lower half of the dataset
-bottomHalfGoal <- subset(datasetFull5, datasetFull5$goal < medianGoal)
-#Step 3: Define the lower quartile
-Q1goal <- median(bottomHalfGoal$goal)
-#Step 4: Define the upper half of the dataset
-topHalfGoal <- subset(datasetFull5, datasetFull5$goal > medianGoal)
-#Step 5: Define the upper quartile
-Q3goal <- median(topHalfGoal$goal)
-#Step 6: Define the interquartile range, which all outlier observations should be outside of
-MedianIQRgoal <- Q3goal - Q1goal
-upper_goal = Q3goal + (1.5 * MedianIQRgoal)
-lower_goal = Q1goal - (1.5 * MedianIQRgoal)
-#Step 7: Remove all outliers
-datasetFull6 <- subset(datasetFull5, (datasetFull5$goal < (Q3goal + (1.5 * MedianIQRgoal))) & (datasetFull5$goal > (Q1goal - (1.5 * MedianIQRgoal))))
-
-### Find and exclude outliers for backers ###
-#Step 1: Find the median
-medianBackers <- median(datasetFull6$backers, na.rm = TRUE) 
-#Step 2: Define the lower half of the dataset
-bottomHalfBackers <- subset(datasetFull6, datasetFull6$backers < medianBackers)
-#Step 3: Define the lower quartile
-Q1backers <- median(bottomHalfBackers$backers)
-#Step 4: Define the upper half of the dataset
-topHalfBackers <- subset(datasetFull6, datasetFull6$backers < medianBackers)
-#Step 5: Define the upper quartile
-Q3backers <- median(topHalfGoal$goal)
-#Step 6: Define the interquartile range, which all outlier observations should be outside of
-IQRbackers <- Q3backers - Q1backers
-#Step 7: Remove all outliers
-datasetFull7 <- subset(datasetFull6, (datasetFull6$backers < (Q3backers + (1.5 * IQRbackers))) && (datasetFull6$backers > (Q1backers - (1.5 * IQRbackers))))
-
-# dataset excluding outliers to be used for rest of script
-
-dataset <- datasetFull7
-
-#_____ Time Series Analysis Plot_____# 
-
-dataset$launched <- as.Date(dataset$launched, format = "%m/%d/%Y" )
-
-dataset$launched_year <- format(dataset$launched,"%Y")
-
-dataset <- subset(dataset, dataset$launched_year != 2018)
-
-dataset$launched_month <- format(dataset$launched, "%B")
-
-success_subset <- subset(dataset, state=='successful')
-
-failed_subset <- subset(dataset, state != 'successful')
-
-all_aggr_data = aggregate(dataset$state, by=list(Category = dataset$launched_year), FUN=length)
-
-success_aggr = aggregate(success_subset$state, by=list(Category = success_subset$launched_year), FUN=length)
-
-failed_aggr = aggregate(failed_subset$state, by=list(Category = failed_subset$launched_year), FUN=length)
-
-all_aggr_data$successful = as.numeric(as.character(success_aggr$x))
-
-all_aggr_data$failed = as.numeric(as.character(failed_aggr$x))
-
-colnames(all_aggr_data)[2] <- 'All'
-
-#_____ Successful Campaigns Analysis ______#
-
-# looking at only successful campaigns
-
-successfulCampaigns <- subset(dataset,state=="successful")
-
-# below is on successful campaigns where currency is USD
-successfulUSD <- subset(successfulCampaigns,currency=="USD")
-
-# clean up of backers
-successfulUSD2 <- successfulUSD
-successfulUSD2$backers <- as.numeric(as.character(successfulUSD$backers))
-
-# clean up of goal
-successfulUSD3 <- successfulUSD2
-successfulUSD3$goal <- as.numeric(as.character(successfulUSD2$goal))
-
-# by categories
-
-meanBackersByCat <- aggregate(successfulUSD3$backers, by=list(category=successfulUSD3$main_category), FUN=mean, na.rm = TRUE)
-colnames(meanBackersByCat) <- c("Category", "MeanBackers")
-
-meanGoalByCat <- aggregate(successfulUSD3$goal, by=list(category=successfulUSD3$main_category), FUN=mean, na.rm = TRUE)
-colnames(meanGoalByCat) <- c("Category", "MeanGoal")
-
-
-#______ Failed Campaigns Analysis _____#
-
-failed<-subset(dataset, currency == 'USD' & state=="failed")
-failed_final<-failed
-failed_final$backers<-as.numeric(as.character(failed$backers))
-failed_final$goal<-as.numeric(as.character(failed$goal))
-
-#finding mean and median goal
-cat_goal_mean<-aggregate(failed_final$goal, by=list(category=failed_final$main_category), 
-                         FUN=mean, na.rm = TRUE)
-
-colnames(cat_goal_mean) <- c("Category", "MeanGoal")
-
-#finding mean backers for failed ks
-cat_backers_mean<-aggregate(failed_final$backers, by=list(category=failed_final$main_category), 
-                            FUN=mean, na.rm = TRUE)
-
-colnames(cat_backers_mean) <- c("Category", "MeanBackers")
-
-#Compute the average price per unit of all successful kickstarters
-target_ppu = (meanGoalSuccessfulUSD / meanBackersSuccessfulUSD)
-
-ppu_frame <- meanGoalByCat
-ppu_frame["meanbackers"] <- meanBackersByCat$MeanBackers
-ppu_frame["PricePerUnit"] <- (ppu_frame$MeanGoal / meanBackersByCat$MeanBackers)
-
-```
-
-
-
-This plots successful vs. failed vs. all kickstarters over time - Graph 1
-```{r}
-colnames(all_aggr_data)[3] <- "Success"
-colnames(all_aggr_data)[4] <- "Fail"
-
-df = melt(all_aggr_data, id=c("Category"))
-
-ggplot(df) + 
-  geom_line(aes(x=Category, y=value, colour = variable, group = variable)) + 
-  scale_colour_manual(values = c("red", "blue", "green")) + ggtitle("Count of Kickstarters Over Time")
-```
-
-
-
-This plots Mean Goal by Category - Graph 2
-```{r}
-colnames(meanGoalByCat)[2] <- "MeanGoal"
-
-ggplot(data = meanGoalByCat, aes(x=Category, y=MeanGoal)) +
-  geom_bar(aes(fill=Category), stat="identity") + 
-  coord_flip() + 
-  ggtitle("Successful Kickstarters - Mean Goal by Category") +
-  theme(legend.position="none")
-
-```
-
-
-
-This plots average goals successful vs. failed for categories - Graph 3
-```{r}
-graph3plot <- meanGoalByCat
-graph3plot["failed_goal"] <- cat_goal_mean$MeanGoal
-
-colnames(graph3plot)[2] <- "Success"
-colnames(graph3plot)[3] <- "Fail"
-
-df = melt(graph3plot, id=c("Category"))
-
-colnames(df)[3] <- "MeanGoal"
-
-ggplot(df, aes(Category, MeanGoal)) +
-  geom_bar(aes(fill=variable), position = "dodge", stat = "identity") +
-  coord_flip()
-
-```
-
-
-
-This plots the Mean Price Per Unit for each category of Kickstarter - Graph 4
-```{r}
-ggplot(ppu_frame, aes(Category, PricePerUnit)) +
-  geom_bar(aes(fill=Category), stat="identity") + 
-  coord_flip() + 
-  ggtitle("Average Price Per Unit by Category") +
-  theme(legend.position="none")
-```
-
-
-
-This plots the mean number of backers for each category - Graph 5
-```{r}
-graph5plot <-meanBackersByCat
-graph5plot["Fail"] <- cat_backers_mean$MeanBackers
-colnames(graph5plot)[2] <- "Success"
-
-df = melt(graph5plot, id=c("Category"))
-
-colnames(df)[3] <- "MeanBackers"
-
-ggplot(df, aes(Category, MeanBackers)) +
-  geom_bar(aes(fill=variable), position = "dodge", stat = "identity") +
-coord_flip()
-```
+Script is available on GitHub: https://github.com/OwenJaniceVyjayanthiINFM600/Kickstarter-Data-Analysis/blob/master/Kickstarter_final.R 
 
 
 
@@ -327,7 +86,7 @@ The source data consisted of campaign-level records of Kickstarter campaigns.  I
 
 Besides general data cleaning as described in the data preparation process, we also chose to remove the outliers for the pledges, goals, and backers, using the 1.5xIQR outlier rule, as you can see in the R script. 
 
-***Insert Graph 4 of Mean Price Per Unit***
+#![Graph of Mean Price Per Unit](Picture1.png)
 
 Our analysis found that successful Kickstarters usually have a Mean Price Per Unit (Goal/Backers) of $32.42, although this obviously varies widely across categories.  Successful Kickstarters would need at least 187 backers on average, or to ship at least 187 units.  
 
